# Voice-Diary-V5

./: .gitignore  README.md  pyproject.toml
downloaded/: 20250412_165709_395000_The Momo Station.m4a  20250412_171509_163000_The Momo Station.m4a  20250412_174924_070000_The Momo Station.m4a  20250412_180104_497000_The Momo Station.m4a  20250412_185236_456000_The Momo Station.m4a  20250412_185329_361000_The Momo Station.m4a  20250412_204729_551000_The Momo Station 2.m4a  The Momo Station.m4a
src/voice_diary/: __init__.py  module_config.json
src/voice_diary/agent_summarize_day/: README.md  agent_manage_utils.py  agent_summarize_day.py  example_usage.py
src/voice_diary/app_scheduler/: app_scheduler.py  pipeline_state.json
src/voice_diary/app_utils/: __init__.py  binary_check.py  clean_script.py  confirm_paths_script.py  find_all_null_bytes.py  find_null_bytes.py  resend_summarized_journal_of_the_day.py  summarize_configs.py  test_resend.py
src/voice_diary/db_utils/: __init__.py  db_config.py  db_manager.py  db_module_diagrams.md  setup_database.py
src/voice_diary/download_audio_files/: download_audio_files.py  oauth_handler.py
src/voice_diary/file_utils/: README.md  __init__.py  mv_files.py
src/voice_diary/logger_utils/: logger_utils.py  module_config.json
src/voice_diary/send_email/: README.md  __init__.py  __main__.py  send_email.py
src/voice_diary/transcribe_raw_audio/: __init__.py  logger_setup.py  transcribe_raw_audio.py  transcribe_raw_audio_old.py
src/voice_diary/vd_scheduler/: pipeline_state.json  vd_scheduler.py
(+93 files in other folders)
